<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.MainActivity">

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/footer"
            android:scaleType="centerCrop"
            android:src="@drawable/banner"
            />



        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/main_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_tag"
                android:textColor="@color/Grey100"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_know_more"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/txt_know_how"
                android:textSize="10sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button_white_filled_flat"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAllCaps="true"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/login_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/txt_already_member"
                    android:textColor="@color/Grey200"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/txt_login"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/or"
                    android:text="@string/txt_login"
                    android:textAllCaps="true"
                    android:textColor="@color/Amber500" />

                <TextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_or"
                    android:textSize="10sp"
                    android:layout_toLeftOf="@+id/txt_register"
                    android:layout_centerVertical="true"
                    android:textColor="@color/Grey200"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/txt_register"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/txt_register"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
