<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.bestdealfinance.bdfpartner.UI.CustomTextViewProxima
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty"
        android:layout_marginTop="@dimen/seven"
        android:layout_marginBottom="@dimen/seven"
        android:text="@string/employment_info"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/seven">
        <EditText
            android:id="@+id/txt_app_employment_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employment_type"
            android:layout_marginTop="@dimen/ten"
            android:clickable="true"
            android:inputType="text"
            android:maxLines="1"
            android:editable="false"
            android:focusable="false"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:textSize="@dimen/fifteen"
            android:background="@drawable/spinner_background"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/seven">.

        <EditText
            android:id="@+id/txt_app_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name"
            android:inputType="text"
            android:layout_marginTop="@dimen/ten"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="@dimen/fifteen"
            android:background="@drawable/spinner_background"
            android:maxLength="50"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/seven">
        <EditText
            android:id="@+id/txt_app_joining_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/joining_date"
            android:layout_marginTop="@dimen/ten"
            android:clickable="true"
            android:inputType="text"
            android:maxLines="1"
            android:editable="false"
            android:focusable="false"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:textSize="@dimen/fifteen"
            android:background="@drawable/spinner_background"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/seven">
        <EditText
            android:id="@+id/txt_app_total_exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_exp"
            android:layout_marginTop="@dimen/ten"
            android:clickable="true"
            android:inputType="text"
            android:maxLines="1"
            android:editable="false"
            android:focusable="false"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:textSize="@dimen/fifteen"
            android:background="@drawable/spinner_background"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/seven">.

        <EditText
            android:id="@+id/txt_app_monthly_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/monthly_income"
            android:inputType="text"
            android:layout_marginTop="@dimen/ten"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="@dimen/fifteen"
            android:background="@drawable/spinner_background"
            android:maxLength="50"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_employment_info_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:text="@string/txt_continue"
        android:gravity="center"
        android:layout_gravity="center"
        android:typeface="sans"
        android:textStyle="bold"
        android:textSize="@dimen/fifteen"
        android:textAllCaps="false"
        android:background="@color/orange"
        android:textColor="@color/white"/>
</LinearLayout>
