<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/ten"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <com.bestdealfinance.bdfpartner.UI.CustomTextViewDomine
            android:id="@+id/main_msg"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            app:typeface="regular"
            android:textColor="@color/white"
            android:textSize="@dimen/fifteen"
            android:text="@string/main_tag"/>
        <com.bestdealfinance.bdfpartner.UI.CustomTextViewProxima
            android:id="@+id/btn_know_more"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fifteen"
            android:gravity="center"
            android:background="@color/white"
            android:paddingLeft="@dimen/fifty"
            android:paddingRight="@dimen/fifty"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:text="@string/txt_know_how"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/ten"
            android:orientation="horizontal">
            <com.bestdealfinance.bdfpartner.UI.CustomTextViewDomine
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/txt_already_member"/>
            <com.bestdealfinance.bdfpartner.UI.CustomTextViewProxima
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/twenty"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/txt_login"/>
            <com.bestdealfinance.bdfpartner.UI.CustomTextViewDomine
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/ten"
                android:gravity="center"
                android:text="@string/txt_or"/>
            <com.bestdealfinance.bdfpartner.UI.CustomTextViewProxima
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="@dimen/ten"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/txt_register"/>
        </LinearLayout>
    </LinearLayout>
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/tag1"-->
        <!--android:layout_weight="1"/>-->

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="5"/>-->

</LinearLayout>
