<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_refer"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        />

    <ImageView
        android:id="@+id/img_refer_banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/heading"
        />
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/twenty"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refer_helper_text"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Grey500"
            />

        <Button
            android:id="@+id/btn_refer_continue"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_continue"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/fifty"
            android:layout_marginRight="@dimen/fifty"
            android:background="@drawable/custom_button_orange_filled_flat"
            android:textColor="@color/white" />

    </LinearLayout>
</RelativeLayout>
